bk_ida/gccida/c1/add_pending_init
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/add_pending_init/src/c-typeck.c:6297:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/add_pending_init/src/c-typeck.c:6300:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/add_pending_init/src/c-typeck.c:6389:12: error: expected expression
*( _OWORD *)&v9->left = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/add_pending_init/src/c-typeck.c:6389:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v9->left = 0LL; 
   ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/add_pending_init/src/obj/c-typeck.o] Error 1
